Clean up and make prettier the admin area

--- a/app/static/sass/module/_common.scss
+++ b/app/static/sass/module/_common.scss
@@ -54,7 +54,7 @@ a {
   &--highlight {
     background-position: 0 90%;
   }
-  &:hover {
+  &:hover, &:focus {
     background-color: lighten($accent-dark, 8%);
   }
 }
