--- a/app/static/sass/public.scss
+++ b/app/static/sass/public.scss
@@ -25,3 +25,4 @@
 @import "module/_title-bar.scss";
 @import "module/_post-list.scss";
 @import "module/_colophon.scss";
+@import "module/_admin.scss";
