--- a/app/templates/admin_base.html
+++ b/app/templates/admin_base.html
@@ -27,9 +27,9 @@
 
     <header class="page-header page-header--admin {% block headermodifier %}{% endblock %}" role="banner">
         <div class="page-bound">
-            <a href="{{ url_for('index') }}" class="header-logo">
+            <a href="{{ url_for('admin_index') }}" class="header-logo">
                 <img src="/static/images/logo.png" alt="" class="header-logo__mark" />
-                <h1 class="header-logo__type">Tim drinks whiskies</h1>
+                <h1 class="header-logo__type">Tdw Admin</h1>
             </a>
 
             <button type="button" class="page-nav__toggle" data-toggle-target="next"><img src="/static/images/icon-plus.png" alt="Toggle menu" /></button>
@@ -49,7 +49,7 @@
 
     <footer class="page-footer {% block footermodifier %}{% endblock %}" role="contentinfo">
         <div class="page-bound">
-            <p>Site, content, photography &copy; 2016 Tim Gavlick. <a href="{{ url_for('colophon') }}">Colophon</a></p>
+            <p><a href="{{ url_for('index') }}">Site</a>, <a href="https://github.com/tjgavlick/whiskey-blog" target="_blank">GitHub</a></p>
         </div>
     </footer><!-- .review -->
 
