--- a/app/templates/admin_edit_distiller.html
+++ b/app/templates/admin_edit_distiller.html
@@ -2,13 +2,20 @@
 
 {% block body %}
     <section role="main">
+
+        <header class="title-bar title-bar--admin">
+            {% if distiller %}
+                <h1 class="title-bar__title">Distiller {{ distiller.id }}: {{ distiller.name }}</h1>
+            {% else %}
+                <h1 class="title-bar__title">New Distiller</h1>
+            {% endif %}
+        </header>
+
         <div class="content">
             <form action="{{ url_for('admin_save_distiller') }}" method="POST" class="page-bound">
                 {% if distiller %}
-                    <p>Editing distiller #{{ distiller.id }}: {{ distiller.name }}</p>
                     <input type="hidden" name="id" value="{{ distiller.id }}" />
                 {% else %}
-                    <p>New distiller</p>
                     <input type="hidden" name="id" value="0" />
                 {% endif %}
 
@@ -19,14 +26,14 @@
 
                 <label class="form-label">
                     <span class="form-label__text">Origin</span>
-                    <select name="origin">
+                    <select name="origin" tabindex="1">
                         {% for origin in origins %}
                             <option value="{{ origin.id }}"{% if origin.id == distiller.origin_id %} selected="selected"{% endif %}>{{ origin.name }}</option>
                         {% endfor %}
                     </select>
                 </label>
 
-                <button class="button" type="submit">Save</button>
+                <button class="button" type="submit" tabindex="1">Save</button>
             </form>
         </div>
     </section>
