--- a/app/templates/admin_edit_origin.html
+++ b/app/templates/admin_edit_origin.html
@@ -2,13 +2,20 @@
 
 {% block body %}
     <section role="main">
+
+        <header class="title-bar title-bar--admin">
+            {% if origin %}
+                <h1 class="title-bar__title">Origin {{ origin.id }}: {{ origin.name }}</h1>
+            {% else %}
+                <h1 class="title-bar__title">New Origin</h1>
+            {% endif %}
+        </header>
+
         <div class="content">
             <form action="{{ url_for('admin_save_origin') }}" method="POST" class="page-bound">
                 {% if origin %}
-                    <p>Editing origin #{{ origin.id }}: {{ origin.name }}</p>
                     <input type="hidden" name="id" value="{{ origin.id }}" />
                 {% else %}
-                    <p>New origin type</p>
                     <input type="hidden" name="id" value="0" />
                 {% endif %}
 
@@ -17,7 +24,7 @@
                     <input type="text" name="name" value="{{ origin.name }}" tabindex="1" />
                 </label>
 
-                <button class="button" type="submit">Save</button>
+                <button class="button" type="submit" tabindex="1">Save</button>
             </form>
         </div>
     </section>
