--- a/app/templates/admin_list_articles.html
+++ b/app/templates/admin_list_articles.html
@@ -2,27 +2,42 @@
 
 {% block body %}
     <section role="main">
+
+        <header class="title-bar title-bar--admin">
+            <h1 class="title-bar__title">Admin / Articles</h1>
+
+            <div class="title-bar__related">
+                <a href="{{ url_for('admin_new_article') }}" class="title-bar__related__item">New entry</a>
+                {% if request.args['order'] == 'alpha' %}
+                    <a href="{{ modify_query(order='written') }}" class="title-bar__related__item">Sort by date</a>
+                {% else %}
+                    <a href="{{ modify_query(order='alpha') }}" class="title-bar__related__item">Sort by name</a>
+                {% endif %}
+            </div>
+        </header>
+
         <div class="content">
             <div class="page-bound">
 
-                <ul>
+                <ul class="admin-list">
                     {% for article in articles %}
-                        <li><p>
-                            <a href="{{ url_for('admin_edit_article', article_id=article.id) }}">{{ article.title }} {{ article.subtitle }}</a>
-                            &mdash;
+                        <li class="admin-list__item">
+                            <h4 class="admin-list__title">
+                                <a href="{{ url_for('admin_edit_article', article_id=article.id) }}">{{ article.title }} {{ article.subtitle }}</a>
+                            </h4>
                             {% if article.is_published %}
-                                published
+                                <span class="admin-list__published">Published</span>,
                             {% else %}
-                                <i style="opacity: 0.4">unpublished</i>
+                                <span class="admin-list__published admin-list__published--unpublished">Unpublished</span>,
                             {% endif %}
-                            <a href="{{ url_for('admin_remove_article', article_id=article.id) }}">(delete)</a>
-                        </p></li>
+                            <span class="admin-list__written">written {{ article.date_posted|datetime }}</span>
+                            <p class="admin-list__description">{{ article.abstract }}</p>
+                            <a href="{{ url_for('admin_remove_article', article_id=article.id) }}" class="admin-list__remove"><img src="/static/images/icon-x.png" alt="" /></a>
+                        </li>
                     {% else %}
                         <li><p>No articles added yet. <a href="{{ url_for('admin_new_article') }}">Add one</a>.</p></li>
                     {% endfor %}
                 </ul>
-
-                <p><a href="{{ url_for('admin_new_article') }}">Add new</a></p>
 
             </div>
         </div>
