--- a/app/templates/admin_list_distillers.html
+++ b/app/templates/admin_list_distillers.html
@@ -2,21 +2,30 @@
 
 {% block body %}
     <section role="main">
+
+        <header class="title-bar title-bar--admin">
+            <h1 class="title-bar__title">Admin / Distillers</h1>
+
+            <div class="title-bar__related">
+                <a href="{{ url_for('admin_new_distiller') }}" class="title-bar__related__item">New distiller</a>
+            </div>
+        </header>
+
         <div class="content">
             <div class="page-bound">
 
-                <ul>
+                <ul class="admin-list">
                     {% for distiller in distillers %}
-                        <li><p>
-                            <a href="{{ url_for('admin_edit_distiller', distiller_id=distiller.id) }}">{{ distiller.name }}</a>
-                            <a href="{{ url_for('admin_remove_distiller', distiller_id=distiller.id) }}">(delete)</a>
-                        </p></li>
+                        <li class="admin-list__item">
+                            <h4 class="admin-list__title">
+                                <a href="{{ url_for('admin_edit_distiller', distiller_id=distiller.id) }}">{{ distiller.name }}</a>
+                            </h4>
+                            <a href="{{ url_for('admin_remove_distiller', distiller_id=distiller.id) }}" class="admin-list__remove"><img src="/static/images/icon-x.png" alt="" /></a>
+                        </li>
                     {% else %}
                         <li><p>No distillers added yet. <a href="{{ url_for('admin_new_distiller') }}">Add one</a>.</p></li>
                     {% endfor %}
                 </ul>
-
-                <p><a href="{{ url_for('admin_new_distiller') }}">Add new</a></p>
 
             </div>
         </div>
