--- a/app/templates/review_list.html
+++ b/app/templates/review_list.html
@@ -22,10 +22,10 @@
                     {% if request.args['rarity'] %}
                         <a href="{{ modify_query(rarity=None) }}" class="search-current-filters__close">{{ rarities[request.args['rarity']].filter_name }}</a>
                     {% endif %}
+                    {% if not request.args['rarity'] and not (request.args['age'] or request.args['origin'] or request.args['proof'] or request.args['price']) %}
+                        all
+                    {% endif %}
                     {% if request.args['type'] %}
-                        {% if not (request.args['rarity'] or request.args['age'] or request.args['origin'] or request.args['proof'] or request.args['price']) %}
-                            all
-                        {% endif %}
                         <a href="{{ modify_query(type=None) }}" class="search-current-filters__close">{{ drink_types[request.args['type']].filter_name }}</a>
                     {% else %}
                         whiskies
@@ -55,17 +55,39 @@
                         <a href="{{ modify_query(price=None) }}" class="search-current-filters__close">{{ price_ranges[request.args['price']].filter_name }}</a>
                     {% endif %}
                     <span class="search-current-filters__nudge">.</span>
-                    You can <a href="{{ request.path }}" class="search-current-filters__close">remove these filters</a> if you'd like.</p>
+                    {% if request.args['sort'] %}
+                        They're sorted by
+                        <a href="{{ modify_query(sort=None) }}" class="search-current-filters__close">{{ review_sorts[request.args['sort']].filter_name }}</a>.
+                    {% endif %}
+                    You can <a href="{{ request.path }}" class="search-current-filters__close">remove these filters</a> if you'd like</p>
                 </p>
             </div>
         {% else %}
-            <p class="search-current-filters__none">Showing all whiskies. You can filter this list below</p>
+            <p class="search-current-filters__none">
+                Showing all whiskies. You can filter this list below
+            </p>
         {% endif %}
 
         <div class="search-layout">
             <button type="button" class="search-refine__toggle" data-toggle-target="next">Refine <img src="/static/images/arrow-right.png" alt="" class="search-refine__toggle__arrow" /></button>
             <div class="search-refine">
-                <div class="grid">
+                <div class="grid grid--compact">
+                    <div class="search-refine__facet grid__unit">
+                        <h3 class="search-refine__facet__title">Sort by</h3>
+                        <ul class="search-refine__facet__list">
+                            {% for key, vals in review_sorts.items()|sort(attribute='0') %}
+                                {% if request.args['sort'] == key %}
+                                    <li class="search-refine__facet__item is-current">
+                                        {{ vals['name'] }}
+                                    </li>
+                                {% else %}
+                                    <li class="search-refine__facet__item">
+                                        <a href="{{ modify_query(sort=key) }}">{{ vals['name'] }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </div>
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Type</h3>
                         <ul class="search-refine__facet__list">
@@ -180,7 +202,7 @@
                             {% endfor %}
                         </ul>
                     {% else %}
-                        <p class="post-list-empty">No reviews matched these criteria. Obviously, I need to drink more.</p>
+                        <p class="post-list-empty">No reviews matched these criteria. {{ no_reviews_message }}</p>
                     {% endif %}
                 </div>
             </div>
