--- a/app/static/sass/module/_admin.scss
+++ b/app/static/sass/module/_admin.scss
@@ -73,6 +73,7 @@ Admin
 }
 
 .admin-write {
+    @extend .group;
     &__top-save {
         float: right;
     }
@@ -80,6 +81,42 @@ Admin
         width: 100%;
     }
     &__textarea {
-        min-height: $line*20;
+        min-height: $line*10;
+    }
+    &__preview {
+        padding: $line/2;
+        margin-bottom: $line;
+        background: darken($bg, 2%);
+        background-image: repeating-linear-gradient(-45deg, transparent 0, transparent 20px, darken($bg, 3%) 20px, darken($bg, 3%) 40px);
+    }
+}
+
+
+@media (max-width: $page-width*2 - 1px) {
+    .admin-write {
+        &__textarea {
+            min-height: $line*12 !important;
+        }
+    }
+}
+
+
+@media (min-width: $page-width*2) {
+    .admin-write {
+        width: $page-width*2;
+        position: relative;
+        left: -$page-width/2;
+        &__label {
+            width: 50%;
+            float: left;
+        }
+        &__preview {
+            width: 50%;
+            min-height: $line*12;
+            float: right;
+            padding-left: $line;
+            padding-right: $line;
+            margin-top: $line;
+        }
     }
 }
