--- a/app/templates/admin_edit_article.html
+++ b/app/templates/admin_edit_article.html
@@ -58,10 +58,17 @@
 
                 <h2>Content</h2>
 
-                <label class="form-label">
-                    <span class="form-label__text">Article body</span>
-                    <textarea name="body" class="admin-write__textarea" tabindex="1">{{ article.body }}</textarea>
-                </label>
+                <div class="admin-write">
+                    <label class="form-label admin-write__label">
+                        <span class="form-label__text">Article body</span>
+                        <textarea name="body" class="admin-write__textarea markdown-textarea" tabindex="1" data-markdown-preview=".admin-write__preview">{{ article.body }}</textarea>
+                    </label>
+
+                    <div class="admin-write__preview">
+                        <!-- js -->
+                    </div>
+                </div>
+
                 <label class="form-label">
                     <span class="form-label__text">Article abstract</span>
                     <textarea name="abstract" tabindex="1">{{ article.abstract }}</textarea>
