Add color display to articles and improve editor experience thereof

--- a/app/static/sass/layout/_article.scss
+++ b/app/static/sass/layout/_article.scss
@@ -69,6 +69,23 @@ p.article-reference {  // specificity over p:last-child rule
     .article-reference a {
         margin-right: 2em;
     }
+
+    .article-color {
+        .color-bar__marker:before {
+            content: '';
+            display: block;
+            width: 0;
+            height: 0;
+            border: 8px solid transparent;
+            border-top-color: transparentize($bg, 0.3);
+            border-bottom-width: 0;
+            position: absolute;
+            bottom: 100%;
+            left: -6px;
+            margin-bottom: 5px;
+            transform: scaleX(0.7);
+        }
+    }
 }
 
 
@@ -108,6 +125,12 @@ p.article-reference {  // specificity over p:last-child rule
         p, li {
             max-width: $page-width;
         }
+    }
+
+    .article-color {
+        width: auto;
+        margin-bottom: -$line/2;
+        margin-left: 35%;
     }
 }
 
