--- a/app/templates/admin_edit_review.html
+++ b/app/templates/admin_edit_review.html
@@ -149,7 +149,8 @@
 
                 <label class="form-label">
                     <span class="form-label__text">Color</span>
-                    <input type="range" name="color" min="1" max="10" step="1" value="{{ review.color }}" tabindex="1" />
+                    <div class="color-bar"></div>
+                    <input type="range" name="color" min="1" max="100" step="1" value="{{ review.color }}" tabindex="1" />
                 </label>
 
 
