Add file uploading and display of uploaded files

--- a/app/static/sass/module/_common.scss
+++ b/app/static/sass/module/_common.scss
@@ -107,6 +107,11 @@ figure {
   }
 }
 
+.careful-remove.is-primed {
+  opacity: 1 !important;
+  background-color: #f00 !important;
+}
+
 .group {
   @include clear;
 }
