--- a/app/static/sass/module/_admin.scss
+++ b/app/static/sass/module/_admin.scss
@@ -58,10 +58,6 @@ Admin
         &:hover {
             opacity: 0.5;
         }
-        &.is-primed {
-            opacity: 1;
-            background: #f00;
-        }
         img {
             display: block;
             width: 12px;
@@ -69,6 +65,37 @@ Admin
     }
     &__item:first-child &__remove {
         margin-top: -$line*3/8;
+    }
+}
+
+.admin-image-list {
+    @extend .title;
+    text-align: left;
+    &__item {
+        position: relative;
+    }
+    &__image {
+        display: block;
+        max-height: 25vh;
+        border: 1px solid $gray-light;
+    }
+    &__item:not(.is-active) &__attributes {
+        display: none;
+    }
+    &__filename, &__time {
+        opacity: 0.7;
+        font-size: $milli;
+    }
+    &__remove {
+        position: absolute;
+        top: 1px;
+        left: 1px;
+        padding: $line/4;
+        background: transparentize($bg, 0.2);
+        img {
+            display: block;
+            width: 12px;
+        }
     }
 }
 
