--- a/app/templates/admin_list_articles.html
+++ b/app/templates/admin_list_articles.html
@@ -32,7 +32,7 @@
                             {% endif %}
                             <span class="admin-list__written">written {{ article.date_posted|datetime }}</span>
                             <p class="admin-list__description">{{ article.abstract }}</p>
-                            <a href="{{ url_for('admin_remove_article', article_id=article.id) }}" class="admin-list__remove"><img src="/static/images/icon-x.png" alt="" /></a>
+                            <a href="{{ url_for('admin_remove_article', article_id=article.id) }}" class="admin-list__remove careful-remove"><img src="/static/images/icon-x.png" alt="" /></a>
                         </li>
                     {% else %}
                         <li><p>No articles added yet. <a href="{{ url_for('admin_new_article') }}">Add one</a>.</p></li>
