--- a/app/templates/admin_list_origins.html
+++ b/app/templates/admin_list_origins.html
@@ -19,7 +19,7 @@
                             <h4 class="admin-list__title">
                                 <a href="{{ url_for('admin_edit_origin', origin_id=origin.id) }}">{{ origin.name }}</a>
                             </h4>
-                            <a href="{{ url_for('admin_remove_origin', origin_id=origin.id) }}" class="admin-list__remove"><img src="/static/images/icon-x.png" alt="" /></a>
+                            <a href="{{ url_for('admin_remove_origin', origin_id=origin.id) }}" class="admin-list__remove careful-remove"><img src="/static/images/icon-x.png" alt="" /></a>
                         </li>
                     {% else %}
                         <li><p>No origins added yet. <a href="{{ url_for('admin_new_origin') }}">Add one</a>.</p></li>
